--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc ."
+    "build": "npx tsc",
+    "run": "node ./js/bot.js"
   },
   "keywords": [],
   "author": "",
